// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDatePicker.js should match snapshot with allowed dates as array 1`] = `

<tbody>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          Jan
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
              disabled
      >
        <div class="btn__content">
          Feb
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          Mar
        </div>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
              disabled
      >
        <div class="btn__content">
          Apr
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--active btn--depressed accent"
      >
        <div class="btn__content">
          May
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
              disabled
      >
        <div class="btn__content">
          Jun
        </div>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          Jul
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
              disabled
      >
        <div class="btn__content">
          Aug
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
              disabled
      >
        <div class="btn__content">
          Sep
        </div>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
              disabled
      >
        <div class="btn__content">
          Oct
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
              disabled
      >
        <div class="btn__content">
          Nov
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
              disabled
      >
        <div class="btn__content">
          Dec
        </div>
      </button>
    </td>
  </tr>
</tbody>

`;

exports[`VDatePicker.js should match snapshot with colored picker 1`] = `

<div class="picker picker--date card"
     style="height: auto;"
>
  <div class="picker__title orange darken-1">
    <div class="date-picker-title">
      <div class="picker__title__btn date-picker-title__year">
        2005
      </div>
      <div class="picker__title__btn date-picker-title__date active">
        <div>
          November
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body"
       style="width: 290px;"
  >
    <div>
      <div class="date-picker-header">
        <button type="button"
                class="btn btn--icon"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <div class="date-picker-header__value">
          <strong class="primary--text">
            2005
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
      <div class="date-picker-table date-picker-table--month">
        <table>
          <tbody>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Jan
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Feb
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Mar
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Apr
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    May
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Jun
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Jul
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Aug
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Sep
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Oct
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Nov
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Dec
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDatePicker.js should match snapshot with colored picker 2`] = `

<div class="picker picker--date card"
     style="height: auto;"
>
  <div class="picker__title orange darken-1">
    <div class="date-picker-title">
      <div class="picker__title__btn date-picker-title__year">
        2005
      </div>
      <div class="picker__title__btn date-picker-title__date active">
        <div>
          November
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body"
       style="width: 290px;"
  >
    <div>
      <div class="date-picker-header">
        <button type="button"
                class="btn btn--icon"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <div class="date-picker-header__value">
          <strong class="orange--text text--darken-1">
            2005
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
      <div class="date-picker-table date-picker-table--month">
        <table>
          <tbody>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Jan
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Feb
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Mar
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Apr
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    May
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Jun
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Jul
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Aug
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Sep
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Oct
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Nov
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Dec
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDatePicker.js should match snapshot with month formatting functions 1`] = `

<tbody>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          (01)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          (02)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          (03)
        </div>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          (04)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          (05)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          (06)
        </div>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          (07)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          (08)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          (09)
        </div>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          (10)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          (11)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          (12)
        </div>
      </button>
    </td>
  </tr>
</tbody>

`;

exports[`VDatePicker.js should match snapshot with pick-month prop 1`] = `

<div class="picker picker--date card"
     style="height: auto;"
>
  <div class="picker__title primary">
    <div class="date-picker-title">
      <div class="picker__title__btn date-picker-title__year">
        2013
      </div>
      <div class="picker__title__btn date-picker-title__date active">
        <div>
          May
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body"
       style="width: 290px;"
  >
    <div>
      <div class="date-picker-header">
        <button type="button"
                class="btn btn--icon"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <div class="date-picker-header__value">
          <strong class="accent--text">
            2013
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
      <div class="date-picker-table date-picker-table--month">
        <table>
          <tbody>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Jan
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Feb
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Mar
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Apr
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    May
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Jun
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Jul
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Aug
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Sep
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Oct
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Nov
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <div class="btn__content">
                    Dec
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>

`;
